[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
itertools = "0.11.0"
nom = "7.1.3"
petgraph = "0.6.4"
rand = "0.8"

[[bin]]
name = "part2"
path = "src/part2.rs"


[[bin]]
name = "part1"
path = "src/main.rs"
